@@ -12,16 +12,16 @@ LAUNCHOBJS   = xymonlaunch.o
 CMDOBJS      = xymoncmd.o
 
 XYMONCLIENTLIB = ../lib/libxymonclient.a
-XYMONCLIENTLIBS = $(XYMONCLIENTLIB)
+XYMONCLIENTLIBS = -lxymonclient
 XYMONCLIENTCOMMLIB = ../lib/libxymonclientcomm.a
-XYMONCLIENTCOMMLIBS = $(XYMONCLIENTCOMMLIB) $(SSLLIBS) $(NETLIBS) $(LIBRTDEF)
+XYMONCLIENTCOMMLIBS = -lxymonclientcomm $(ZLIBLIBS) $(SSLLIBS) $(NETLIBS) $(LIBRTDEF)
 
 XYMONLIB = ../lib/libxymon.a
-XYMONLIBS = $(XYMONLIB)
+XYMONLIBS = -lxymon $(PCRELIBS)
 XYMONCOMMLIB = ../lib/libxymoncomm.a
-XYMONCOMMLIBS = $(XYMONCOMMLIB) $(SSLLIBS) $(NETLIBS) $(LIBRTDEF)
+XYMONCOMMLIBS = -lxymoncomm $(SSLLIBS) $(NETLIBS) $(ZLIBLIBS) $(LIBRTDEF) $(PCRELIBS)
 XYMONTIMELIB = ../lib/libxymontime.a
-XYMONTIMELIBS = $(XYMONTIMELIB) $(LIBRTDEF)
+XYMONTIMELIBS = -lxymontime $(LIBRTDEF)
 
 XYMONALLLIBS = $(XYMONCLIENTLIB) $(XYMONCLIENTCOMMLIB) $(XYMONLIB) $(XYMONCOMMLIB) $(XYMONTIMELIB)
 
